# Py-color-picker1.0

./: .gitignore  README.md  build_exe.bat  build_exe.sh  color_picker.py  pyproject.toml  requirements.txt
tests/: test_hsv_wheel_math.py
