[project]
name = "py-color-picker"
version = "1.0.0"
description = "A feature-rich color picker app built with Python and Tkinter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ttkbootstrap>=1.10.1",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = false
